org.openbel.framework.common/src/main/java/org/openbel/framework/common/bel/parser/BELStatementParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 BELStatement.g 2014-05-08 11:53:09

    package org.openbel.framework.common.bel.parser;
  
    import org.openbel.bel.model.BELParseErrorException;
    import org.openbel.framework.common.model.BELObject;
    import org.openbel.framework.common.model.Namespace;
    import org.openbel.framework.common.model.Parameter;
    import org.openbel.framework.common.model.Statement;
    import org.openbel.framework.common.model.Term;
    import org.openbel.framework.common.enums.FunctionEnum;
    import org.openbel.framework.common.enums.RelationshipType;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class BELStatementParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "OPEN_PAREN", "CLOSE_PAREN", "NS_PREFIX", "NS_VALUE", "QUOTED_VALUE", "LETTER", "DIGIT", "EscapeSequence", "UnicodeEscape", "OctalEscape", "HexDigit", "WS", "','", "'proteinAbundance'", "'p'", "'rnaAbundance'", "'r'", "'abundance'", "'a'", "'microRNAAbundance'", "'m'", "'geneAbundance'", "'g'", "'biologicalProcess'", "'bp'", "'pathology'", "'path'", "'complexAbundance'", "'complex'", "'translocation'", "'tloc'", "'cellSecretion'", "'sec'", "'cellSurfaceExpression'", "'surf'", "'reaction'", "'rxn'", "'compositeAbundance'", "'composite'", "'fusion'", "'fus'", "'degradation'", "'deg'", "'molecularActivity'", "'act'", "'catalyticActivity'", "'cat'", "'kinaseActivity'", "'kin'", "'phosphataseActivity'", "'phos'", "'peptidaseActivity'", "'pep'", "'ribosylationActivity'", "'ribo'", "'transcriptionalActivity'", "'tscript'", "'transportActivity'", "'tport'", "'gtpBoundActivity'", "'gtp'", "'chaperoneActivity'", "'chap'", "'proteinModification'", "'pmod'", "'substitution'", "'sub'", "'truncation'", "'trunc'", "'reactants'", "'products'", "'list'", "'increases'", "'->'", "'decreases'", "'-|'", "'directlyIncreases'", "'=>'", "'directlyDecreases'", "'=|'", "'causesNoChange'", "'positiveCorrelation'", "'negativeCorrelation'", "'translatedTo'", "'>>'", "'transcribedTo'", "':>'", "'isA'", "'subProcessOf'", "'rateLimitingStepOf'", "'biomarkerFor'", "'prognosticBiomarkerFor'", "'orthologous'", "'analogous'", "'association'", "'--'", "'hasMembers'", "'hasComponents'", "'hasMember'", "'hasComponent'"
    };
    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int T__99=99;
    public static final int T__100=100;
    public static final int T__101=101;
    public static final int T__102=102;
    public static final int T__103=103;
    public static final int OPEN_PAREN=4;
    public static final int CLOSE_PAREN=5;
    public static final int NS_PREFIX=6;
    public static final int NS_VALUE=7;
    public static final int QUOTED_VALUE=8;
    public static final int LETTER=9;
    public static final int DIGIT=10;
    public static final int EscapeSequence=11;
    public static final int UnicodeEscape=12;
    public static final int OctalEscape=13;
    public static final int HexDigit=14;
    public static final int WS=15;

    // delegates
    // delegators


        public BELStatementParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public BELStatementParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return BELStatementParser.tokenNames; }
    public String getGrammarFileName() { return "BELStatement.g"; }


        private final List<BELParseErrorException> errors = new ArrayList<BELParseErrorException>();
        
        public List<BELParseErrorException> getSyntaxErrors() {
            return errors;
        }
        
        @Override
        public void emitErrorMessage(String msg) {
        }
        
        @Override
        public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            String context = "";
            errors.add(new BELParseErrorException.SyntaxException(e.line, e.charPositionInLine, context, e));
        }


    public static class statement_return extends ParserRuleReturnScope {
        public Statement r;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // BELStatement.g:64:1: statement returns [Statement r] : st= outer_term (rel= relationship ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term ) )? ;
    public final BELStatementParser.statement_return statement() throws RecognitionException {
        BELStatementParser.statement_return retval = new BELStatementParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OPEN_PAREN1=null;
        Token CLOSE_PAREN2=null;
        BELStatementParser.outer_term_return st = null;

        BELStatementParser.relationship_return rel = null;

        BELStatementParser.outer_term_return nst = null;

        BELStatementParser.relationship_return nrel = null;

        BELStatementParser.outer_term_return not = null;

        BELStatementParser.outer_term_return ot = null;


        Object OPEN_PAREN1_tree=null;
        Object CLOSE_PAREN2_tree=null;

        try {
            // BELStatement.g:64:32: (st= outer_term (rel= relationship ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term ) )? )
            // BELStatement.g:65:5: st= outer_term (rel= relationship ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term ) )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_outer_term_in_statement81);
            st=outer_term();

            state._fsp--;

            adaptor.addChild(root_0, st.getTree());

                    final Statement s = new Statement((st!=null?st.r:null));
                    retval.r = s;
                
            // BELStatement.g:69:5: (rel= relationship ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term ) )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=76 && LA2_0<=103)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // BELStatement.g:70:9: rel= relationship ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term )
                    {
                    pushFollow(FOLLOW_relationship_in_statement101);
                    rel=relationship();

                    state._fsp--;

                    adaptor.addChild(root_0, rel.getTree());

                                s.setRelationshipType((rel!=null?rel.r:null));
                            
                    // BELStatement.g:73:9: ( ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN ) | ot= outer_term )
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==OPEN_PAREN) ) {
                        alt1=1;
                    }
                    else if ( ((LA1_0>=17 && LA1_0<=75)) ) {
                        alt1=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 1, 0, input);

                        throw nvae;
                    }
                    switch (alt1) {
                        case 1 :
                            // BELStatement.g:74:13: ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN )
                            {
                            // BELStatement.g:74:13: ( OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN )
                            // BELStatement.g:75:17: OPEN_PAREN nst= outer_term nrel= relationship not= outer_term CLOSE_PAREN
                            {
                            OPEN_PAREN1=(Token)match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_statement145); 
                            OPEN_PAREN1_tree = (Object)adaptor.create(OPEN_PAREN1);
                            adaptor.addChild(root_0, OPEN_PAREN1_tree);

                            pushFollow(FOLLOW_outer_term_in_statement166);
                            nst=outer_term();

                            state._fsp--;

                            adaptor.addChild(root_0, nst.getTree());

                                                final Statement ns = new Statement((nst!=null?nst.r:null));
                                            
                            pushFollow(FOLLOW_relationship_in_statement188);
                            nrel=relationship();

                            state._fsp--;

                            adaptor.addChild(root_0, nrel.getTree());

                                                ns.setRelationshipType((nrel!=null?nrel.r:null));
                                            
                            pushFollow(FOLLOW_outer_term_in_statement211);
                            not=outer_term();

                            state._fsp--;

                            adaptor.addChild(root_0, not.getTree());

                                                ns.setObject(new Statement.Object((not!=null?not.r:null)));
                                                s.setObject(new Statement.Object(ns));
                                                retval.r = s;
                                            
                            CLOSE_PAREN2=(Token)match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_statement231); 
                            CLOSE_PAREN2_tree = (Object)adaptor.create(CLOSE_PAREN2);
                            adaptor.addChild(root_0, CLOSE_PAREN2_tree);


                            }


                            }
                            break;
                        case 2 :
                            // BELStatement.g:90:17: ot= outer_term
                            {
                            pushFollow(FOLLOW_outer_term_in_statement280);
                            ot=outer_term();

                            state._fsp--;

                            adaptor.addChild(root_0, ot.getTree());

                                                s.setObject(new Statement.Object((ot!=null?ot.r:null)));
                                                retval.r = s;
                                            

                            }
                            break;

                    }


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class outer_term_return extends ParserRuleReturnScope {
        public Term r;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "outer_term"
    // BELStatement.g:98:1: outer_term returns [Term r] : f= function OPEN_PAREN ( ( ',' )? arg= argument )* CLOSE_PAREN ;
    public final BELStatementParser.outer_term_return outer_term() throws RecognitionException {
        BELStatementParser.outer_term_return retval = new BELStatementParser.outer_term_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OPEN_PAREN3=null;
        Token char_literal4=null;
        Token CLOSE_PAREN5=null;
        BELStatementParser.function_return f = null;

        BELStatementParser.argument_return arg = null;


        Object OPEN_PAREN3_tree=null;
        Object char_literal4_tree=null;
        Object CLOSE_PAREN5_tree=null;

        try {
            // BELStatement.g:98:28: (f= function OPEN_PAREN ( ( ',' )? arg= argument )* CLOSE_PAREN )
            // BELStatement.g:99:5: f= function OPEN_PAREN ( ( ',' )? arg= argument )* CLOSE_PAREN
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_function_in_outer_term322);
            f=function();

            state._fsp--;

            adaptor.addChild(root_0, f.getTree());

                    final Term outerTerm = new Term((f!=null?f.r:null));
                
            OPEN_PAREN3=(Token)match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_outer_term330); 
            OPEN_PAREN3_tree = (Object)adaptor.create(OPEN_PAREN3);
            adaptor.addChild(root_0, OPEN_PAREN3_tree);

            // BELStatement.g:103:5: ( ( ',' )? arg= argument )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=NS_PREFIX && LA4_0<=QUOTED_VALUE)||(LA4_0>=16 && LA4_0<=75)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // BELStatement.g:103:6: ( ',' )? arg= argument
            	    {
            	    // BELStatement.g:103:6: ( ',' )?
            	    int alt3=2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0==16) ) {
            	        alt3=1;
            	    }
            	    switch (alt3) {
            	        case 1 :
            	            // BELStatement.g:103:6: ','
            	            {
            	            char_literal4=(Token)match(input,16,FOLLOW_16_in_outer_term337); 
            	            char_literal4_tree = (Object)adaptor.create(char_literal4);
            	            adaptor.addChild(root_0, char_literal4_tree);


            	            }
            	            break;

            	    }

            	    pushFollow(FOLLOW_argument_in_outer_term342);
            	    arg=argument();

            	    state._fsp--;

            	    adaptor.addChild(root_0, arg.getTree());
            	     outerTerm.addFunctionArgument((arg!=null?arg.r:null)); 

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            CLOSE_PAREN5=(Token)match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_outer_term352); 
            CLOSE_PAREN5_tree = (Object)adaptor.create(CLOSE_PAREN5);
            adaptor.addChild(root_0, CLOSE_PAREN5_tree);


                    retval.r = outerTerm;
                

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "outer_term"

    public static class argument_return extends ParserRuleReturnScope {
        public BELObject r;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argument"
    // BELStatement.g:109:1: argument returns [BELObject r] : (fp= param | ff= term );
    public final BELStatementParser.argument_return argument() throws RecognitionException {
        BELStatementParser.argument_return retval = new BELStatementParser.argument_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        BELStatementParser.param_return fp = null;

        BELStatementParser.term_return ff = null;



        try {
            // BELStatement.g:109:31: (fp= param | ff= term )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=NS_PREFIX && LA5_0<=QUOTED_VALUE)) ) {
                alt5=1;
            }
            else if ( ((LA5_0>=17 && LA5_0<=75)) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // BELStatement.g:110:5: fp= param
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_param_in_argument380);
                    fp=param();

                    state._fsp--;

                    adaptor.addChild(root_0, fp.getTree());
                     retval.r = (fp!=null?fp.r:null); 

                    }
                    break;
                case 2 :
                    // BELStatement.g:111:5: ff= term
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_term_in_argument392);
                    ff=term();

                    state._fsp--;

                    adaptor.addChild(root_0, ff.getTree());
                     retval.r = (ff!=null?ff.r:null); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argument"

    public static class term_return extends ParserRuleReturnScope {
        public Term r;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // BELStatement.g:114:1: term returns [Term r] : pfv= function OPEN_PAREN ( ( ',' )? (it= term | pp= param ) )* CLOSE_PAREN ;
    public final BELStatementParser.term_return term() throws RecognitionException {
        BELStatementParser.term_return retval = new BELStatementParser.term_return();
        retval.start = input.LT(1);

        Object root_0 = null;
